--- a/style/form.css
+++ b/style/form.css
@@ -110,6 +110,7 @@ input[type="checkbox"] {
 
 }
 .form__picture-hand {
+    z-index: 100;
     position: absolute;
     width: 221px;
     top: 85%;
