--- a/style/style.css
+++ b/style/style.css
@@ -381,10 +381,10 @@ menu {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(163, 161, 161, 0.85);
-    z-index: 101;
+    z-index: 103;
 
 }
 .submenu {
@@ -458,7 +458,9 @@ menu {
         transform: scale(0);
     }
 }
+.overlay {
 
+}
 .profit__conteiner {
     display: none;
 }
