--- a/style/modal.css
+++ b/style/modal.css
@@ -84,7 +84,7 @@
     height: 100%;
     background-color: rgba(163, 161, 161, 0.85);
     z-index: 4;
-    display: none;
+    transform: scale(0);
 }
 @media (min-width: 768px) {
     .modal {
