--- a/style/steps.css
+++ b/style/steps.css
@@ -30,8 +30,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-left: 10px;
-    margin-top: 20px;
+    margin-left: 5%;
+    margin-top: 5%;
     gap: 18px;
     flex-wrap: wrap;
 }
@@ -43,9 +43,11 @@
     margin: 0 auto;
 }
 .step__text {
-    margin-left: 10px;
-    margin-right: 20px;
+    padding-left: 5%;
+    padding-right: 10%;
     max-width: 80vw;
+    font-weight: 400;
+    font-size: 18px;
 }
 .step__image {
     margin: 0 auto 50px;
