--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,9 @@ main {
         overflow-x: hidden;
     }
 
-    
+    a:hover {
+	    cursor: pointer;
+    }
 
     a {
         text-decoration: none;
